@@ -166,6 +166,34 @@ name|int
 index|[]
 name|docStarts
 decl_stmt|;
+comment|/** Creates a searcher searching the index in the named    *  directory, with readOnly=true    * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    * @param path directory where IndexReader will be opened    */
+DECL|method|IndexSearcher
+specifier|public
+name|IndexSearcher
+parameter_list|(
+name|Directory
+name|path
+parameter_list|)
+throws|throws
+name|CorruptIndexException
+throws|,
+name|IOException
+block|{
+name|this
+argument_list|(
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|path
+argument_list|,
+literal|true
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 comment|/** Creates a searcher searching the index in the named    *  directory.  You should pass readOnly=true, since it    *  gives much better concurrent performance, unless you    *  intend to do write operations (delete documents or    *  change norms) with the underlying IndexReader.    * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    * @param path directory where IndexReader will be opened    * @param readOnly if true, the underlying IndexReader    * will be opened readOnly    */
 DECL|method|IndexSearcher
 specifier|public
@@ -646,56 +674,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|SortField
-index|[]
-name|fields
-init|=
-name|sort
-operator|.
-name|fields
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|fields
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|SortField
-name|field
-init|=
-name|fields
-index|[
-name|i
-index|]
-decl_stmt|;
-name|String
-name|fieldname
-init|=
-name|field
-operator|.
-name|getField
-argument_list|()
-decl_stmt|;
-name|int
-name|type
-init|=
-name|field
-operator|.
-name|getType
-argument_list|()
-decl_stmt|;
-block|}
 name|TopFieldCollector
 name|collector
 init|=
